--- a/css/japandrama.css
+++ b/css/japandrama.css
@@ -2,6 +2,11 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans TC', 'Microsoft JhengHei', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.navbar-toggler {
+	border: none;
+	padding: 0;
+}
+
 #carouselExampleControls {
 	margin-bottom: 20px;
 }
