--- a/css/japandrama.css
+++ b/css/japandrama.css
@@ -1,85 +1,69 @@
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans TC', 'Microsoft JhengHei', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans TC', 'Microsoft JhengHei', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .navbar-toggler {
-	border: none;
-	padding: 0;
+    border: none;
+    padding: 0;
 }
 
 #carouselExampleControls {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .card {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 html :not(.fuck) {
-	font-size: 0.6rem;
+    font-size: 0.6rem;
 }
 
 @media (max-width: 575px) {
-	.link {
-		width: 100%;
-	}
-
-	html :not(.fuck) {
-		font-size: 0.6rem;
-	}
-
-	.rate {
-		position: absolute;
-		right: 0;
-	}
+    .link {
+        width: 100%;
+    }
+    html :not(.fuck) {
+        font-size: 0.6rem;
+    }
 }
 
 @media (min-width: 576px) {
-	.link {
-		width: 100%;
-	}
-
-	html :not(.fuck) {
-		font-size: 1.0rem;
-	}
-
-	.rate {
-		position: absolute;
-		right: 0;
-	}
+    .link {
+        width: 100%;
+    }
+    html :not(.fuck) {
+        font-size: 1.0rem;
+    }
 }
 
 @media (min-width: 768px) {
-	.link {
-		width: 100%;
-	}
-
-	html :not(.fuck) {
-		font-size: 1.2rem;
-	}
-
-	.rate {
-		position: absolute;
-		right: 0;
-	}
+    .link {
+        width: 100%;
+    }
+    html :not(.fuck) {
+        font-size: 1.2rem;
+    }
 }
 
 @media (min-width: 992px) {
-	.link {
-		width: 100%;
-	}
-
-	html :not(.fuck) {
-		font-size: 1.4rem;
-	}
+    .link {
+        width: 100%;
+    }
+    html :not(.fuck) {
+        font-size: 1.4rem;
+    }
 }
 
 @media (min-width: 1200px) {
-	.link {
-		width: 50%;
-	}
+    .link {
+        width: 100%;
+    }
+    html :not(.fuck) {
+        font-size: 1.6rem;
+    }
+}
 
-	html :not(.fuck) {
-		font-size: 1.6rem;
-	}
+.down {
+    display: none;
 }
